# sharepoint-rest-api

./: .flake8  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGES  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: django.yml
docs/_ext/: applyxrefs.py  literals_to_xrefs.py  version.py
docs/source/: api.rst  builders.rst  changes.rst  client.rst  conf.py  globals.txt  index.rst  install.rst  intershpinx.rst  intersphinx.py  models.rst  serializers.rst  settings.rst  utils.rst
docs/source/_ext/: djangodocs.py  literals_to_xrefs.py  wfp.py
src/sharepoint_rest_api/: __init__.py  admin.py  apps.py  client.py  config.py  filters.py  models.py  urls.py  utils.py
src/sharepoint_rest_api/builders/: camlquery_builder.py  querystring_builder.py  search_request_builder.py
src/sharepoint_rest_api/libs/: search_request.py
src/sharepoint_rest_api/migrations/: 0001_initial.py
src/sharepoint_rest_api/serializers/: fields.py  files.py  model_serializers.py  sharepoint.py
src/sharepoint_rest_api/views/: base.py  files.py  model_views.py  settings_based.py  url_based.py
tests/: .coveragerc  api_checker.py  conftest.py  factories.py  test_api.py  test_client.py  vcrpy.py
tests/_api_checker/tests.test_api/: library.fixture.json  site.fixture.json  tenant.fixture.json
tests/_api_checker/tests.test_api/test_api/_api_sharepoint_unitst_GLB-DRP_2019%20Certified%20Reports_rest_/get/: None.response.json
tests/_api_checker/tests.test_api/test_api_caml/_api_sharepoint_unitst_GLB-DRP_2019%20Certified%20Reports_caml_/get/: None.response.json
tests/_api_checker/tests.test_api/test_api_sharepoint_libraries/_api_libraries_/get/: None.response.json
tests/_api_checker/tests.test_api/test_api_sharepoint_sites/_api_sites_/get/: None.response.json
tests/_api_checker/tests.test_api/test_api_sharepoint_tenants/_api_tenants_/get/: None.response.json
tests/_api_checker/tests.test_api/test_settings_api/_api_sharepoint_2019%20Certified%20Reports_rest_/get/: None.response.json
tests/_api_checker/tests.test_client/: library.fixture.json  site.fixture.json  tenant.fixture.json
tests/builders/: test_camlquery_builder.py  test_querystring_builder.py  test_search_builder.py
tests/demoproject/: manage.py
tests/demoproject/demo/: settings.py  urls.py
tests/vcr_cassettes/api/: caml-list.yml  list.yml  simple-caml-list.yml  simple-list.yml
tests/vcr_cassettes/client/: caml_items.yml  files.yml  folders.yml  items.yml
(+1 files in other folders)
