[project]
name = "sharepoint-rest-api"
version = "0.18"
description = "Provide REST API (DRF style) for SharePoint"
readme = "README.rst"
license = {text = "Apache-2.0 OR MIT"}
authors = [
    { name = "Domenico Di Nicola", email = "domdinicola@unicef.org" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django",
    "django-filter",
    "django-model-utils",
    "djangorestframework",
    "office365-rest-python-client",
]

[tool.uv]
dev-dependencies = [
    "django-webtest",
    "drf_api_checker",
    "factory-boy",
    "flake8",
    "isort",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
    "pytest-redis",
    "requests-mock",
    "sphinx",
    "unittest2",
    "vcrpy",
]

[project.urls]
Homepage = "https://github.com/domdinicola/sharepoint-rest-api"
